# trading-strategies

./: .env.example  .gitignore  CLAUDE.md  README.md  README_TELEGRAM_SETUP.md  backtest_engine.py  main.py  pyproject.toml  quick_tw_test.py  run_tests.py  tw_0050_turtle_backtest.py  tw_stock_utils.py  utils.py
.claude/: settings.local.json
config/: config.py  telegram_config.json.example
notebooks/: chu_chia_hung_strategy_backtest.ipynb  quick_start_example.ipynb  turtle_strategy_backtest.ipynb
scripts/: daily_signal_monitor.py  setup_crontab.sh
strategies/: __init__.py  base_strategy.py  buy_and_hold_strategy.py  chu_chia_hung_strategy.py  pullback_buy_strategy.py  sma_crossover.py  turtle_strategy.py
test/: README.md  __init__.py  compare_tw_etfs.py  quick_tw_test.py  run_all_tests.py  test_all_strategies.py  test_crwd_comparison.py  test_fubon_api.py  test_fubon_final.py  test_fubon_http_api.py  test_fubon_simple.py  test_notebook_imports.py  test_tw_stocks.py  turtle_vs_buy_hold_comparison.py
utils/: __init__.py  fubon_data_fetcher.py  signal_checker.py  telegram_notifier.py
