[project]
name = "trading-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "fubon-neo",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "twstock>=1.4.0",
    "yfinance>=0.2.65",
]

[tool.uv.sources]
fubon-neo = { path = "fubon_neo-2.2.4-cp37-abi3-macosx_11_0_arm64.whl" }
